=======
CHANGES
=======

4.0.0 (unreleased)
------------------

- 100% unit test coverage.

- Move doctest examples into Sphinx documentation.

- Dropped explicit support for Python 2.4 / 2.5 / 3.1.

- Added explicit support for PyPy.

- Added 'setup.py dev' alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Added 'setup.py docs' alias (installs ``Sphinx`` and dependencies).


3.6.1 (2011-07-20)
------------------

- Correct metadata in this file for release date.

3.6.0 (2011-07-20)
------------------

- Python 3 support.

- Don't attempt to compile C extensions on PyPy or Jython.

- Add a tox.ini (see http://tox.readthedocs.org/en/latest/) for easier
  automated testing.

3.5.3 (2010-08-10)
------------------

- Made compilation of C extension optional again; 3.5.1 broke this
  inasmuch as this package become unusable on non-CPython platforms.
  Making the compilation of the C extension optional again implied
  removing ``setup.py`` code added in 3.5.1 which made the C extension
  a setuptools "Feature" and readding code from 3.5.0 which overrides
  the distutils ``build_ext`` command.

- Move pickle equality tests into a unittest.TestCase test to make it
  easier to condition the tests on whether the C extension has been
  compiled.  This also makes the tests pass on Jython.

3.5.2 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.

3.5.1 (2010-04-10)
------------------

- LP #257657 / 489529:  Fix memory leak in C extension.

- Fixed the compilation of the C extension with python 2.6: refactored it as a
  setuptools Feature.

3.5.0 (2009-06-27)
------------------

- Made compilation of C extension optional.

- Added support to bootstrap on Jython.

- Changed package's mailing list address from zope3-dev at zope.org to
  zope-dev at zope.org, because zope3-dev is now retired.

- Reformatted change log to common formatting style.

- Update package description and docs a little.
